Update notebook, outuput figures

--- a/src/SpeedDating.ipynb
+++ b/src/SpeedDating.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Link to dataset on OpenML.org including description of variables: https://www.openml.org/d/40536"
+    "- [Link to dataset](https://www.openml.org/d/40536) on OpenML.org which includes full descriptions of variables"
    ]
   },
   {
